--- a/style.css
+++ b/style.css
@@ -61,3 +61,24 @@ a,.footer,p{
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+/* Styles for Contact */
+form{
+    color: #777777;
+    width: 920px;
+    background-color:#ffffff;
+    margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+.btn{
+    background-color: #4aaaa5;
+    color: white;
+    border: 0;
+}
+
+.btn:hover{
+    background-color: #777777;
+    color: aqua;
+}
